--- a/_publications/0_2018-11-01-iros.md
+++ b/_publications/0_2018-11-01-iros.md
@@ -1,8 +1,8 @@
 ---
 default: publication
-title:  "Generalized  Multiple  Correlation  Coefficient  as  a  Similarity Measurement  between  Trajectories"
-where:   IROS 2019
+title:  "ImitationFlow: Learning Deep Stable Stochastic Dynamic Systems by Normalizing Flows"
+where:   IROS 2020
 extra:
-authors: "Julen Urain & Jan Peters"
+authors: "Julen Urain, Michelle Ginesi, Davide Tateo & Jan Peters"
 ---
-Generalized Multiple Correlation Coefficient (GMCC) is presented like the natural extension of the Multiple Correlation Coefficient. The motivation of this paper is two-fold: First, to introduce a new correlation metric that presents the best properties to compute similarities between trajectories invariant to linear transformations and compare it with some state of the art similarity distances. Second, to present a natural way of integrating the similarity metric in an Imitation Learning scenario for clustering robot trajectories.
+We introduce ImitationFlow, a novel Deep generative model that allows learning complex globally stable, stochastic, nonlinear dynamics. Our approach extends the Normalizing Flows framework to learn stable Stochastic Differential Equations. We prove the Lyapunov stability for a class of Stochastic Differential Equations and we propose a learning algorithm to learn them from a set of demonstrated trajectories. Our model extends the set of stable dynamical systems that can be represented by state-of-the-art approaches, eliminates the Gaussian assumption on the demonstrations, and outperforms the previous algorithms in terms of representation accuracy. We show the effectiveness of our method with both standard datasets and a real robot experiment.
